--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -13,7 +13,7 @@
     <input matInput type="password" placeholder="Contraseña">
   </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary">
+  <button mat-button mat-flat-button color="primary" (click)="onLogin()">
     <mat-icon>save</mat-icon>
     Iniciar sesión
   </button>
